adress issue with sorting icons being right aligned
adress issue of loading Circle being squished

--- a/packages/components/src/components/Table/styles/table.module.scss
+++ b/packages/components/src/components/Table/styles/table.module.scss
@@ -113,10 +113,6 @@
         color: var(--text-color);
     }
 
-    .buttonText {
-        flex: 1;
-    }
-
     &:focus-visible {
         @include focusStyle.focus-outline;
     }
